
                             Kiji Express Release Notes

Version 0.15.0
  * EXP-353. Renamed utility classes to be suffixed with Util.

Version 0.14.0
  * EXP-350. Support multiple HFile output taps in a single flow.
  * EXP-360. ColumnOutputSpec factory methods have been replaced with ColumnOutputSpec.Builder.
      Case class style apply and unapply methods are now hidden to protect binary compatiblity of
      KijiExpress updates.
  * EXP-335. Move kiji-express-examples repo into kiji-express as a submodule.
  * EXP-334 & EXP-257. Pull repl out into a submodule of Express. Move repl-
      specific functionality out of KijiPipe and into a new KijiPipeTool class.
  * EXP-345. Rename root to kiji-express-root and flow module to kiji-express.
  * EXP-331. Made kiji-express a multi-module project. Existing code
      moved to the kiji-express-flow module.

Version 0.13.0
  * EXP-316. memory leak when reading from cells with many versions

Version 0.12.0
  * EXP-221. Improve the KijiSlice and PagedKijiSlice APIs.
  * EXP-275. Removed default values option. Columns with missing values
      will instead be represented with an emtpy slice.
  * EXP-286. Rename ColumnRequestInput#schema -> schemaSpec.
  * EXP-282. Cannot pack to specific objects with snake_case fields.
  * EXP-279. Change paging options to use PagingSpec.
  * EXP-222. Improve generic Avro APIs.

Version 0.11.0
  * EXP-249. Refactor the Model Lifecycle into a separate
      project: kiji-modeling.

Version 0.10.0
  * EXP-129. Add evaluation phase to model environment.
  * EXP-128. Add evaluation phase to model definition.
  * EXP-153. Support joining pipes on entity_ids and add a factory method
      to create a hashed entityId.
  * EXP-220. Finalize KijiOutput API for 1.0 release.
  * EXP-185. Extractor in ScoreProducer is now optional.
  * EXP-219. Finalize KijiInput API for 1.0 release.
  * EXP-223. Make constructors for generic AvroValues public.