@@ -2,10 +2,11 @@
                              Kiji Express Release Notes
 
 Version 0.15.0
+  * EXP-388. Use buffered writer for direct kiji output.
+  * EXP-350. Support multiple HFile output taps in a single flow.
   * EXP-353. Renamed utility classes to be suffixed with Util.
 
 Version 0.14.0
-  * EXP-350. Support multiple HFile output taps in a single flow.
   * EXP-360. ColumnOutputSpec factory methods have been replaced with ColumnOutputSpec.Builder.
       Case class style apply and unapply methods are now hidden to protect binary compatiblity of
       KijiExpress updates.
